--- a/camel-entur-google-pubsub/pom.xml
+++ b/camel-entur-google-pubsub/pom.xml
@@ -18,19 +18,16 @@
 <!--
 Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.entur.helpers</groupId>
         <artifactId>helper</artifactId>
         <version>1.0.21-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
-
-    <properties>
-        <license.licenseResolver>${project.baseUri}/../src/license</license.licenseResolver>
-    </properties>
-
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>camel-entur-google-pubsub</artifactId>
 
@@ -39,6 +36,10 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
         Base configuration for Google PubSub clients, to be used for Camel clients.
         Non-Camel clients should use entur-google-pubsub instead.
     </description>
+
+    <properties>
+        <license.licenseResolver>${project.baseUri}/../src/license</license.licenseResolver>
+    </properties>
 
     <dependencies>
         <!-- NOTICE that you put the versions in the parent dependency
