--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.11</version>
+        <version>1.0.12</version>
     </parent>
 
     <groupId>org.entur.helpers</groupId>
@@ -51,7 +51,6 @@
         <module>hazelcast-helper</module>
         <module>calendar-helper</module>
         <module>organisation</module>
-        <module>jms-batch</module>
         <module>slack</module>
         <module>entur-google-pubsub</module>
         <module>camel-entur-google-pubsub</module>
@@ -89,10 +88,14 @@
 
         <guava.version>28.1-jre</guava.version>
         <keycloak.version>4.8.3.Final</keycloak.version>
-        <spring-cloud-gcp.version>1.2.3.RELEASE</spring-cloud-gcp.version>
-        <camel.version>2.25.1</camel.version>
-        <kubernetes-client.version>4.9.0</kubernetes-client.version>
-        <commons-io.version>2.6</commons-io.version>
+        <spring-cloud-gcp.version>1.2.5.RELEASE</spring-cloud-gcp.version>
+        <camel.version>2.25.2</camel.version>
+        <kubernetes-client.version>4.9.2</kubernetes-client.version>
+        <commons-io.version>2.7</commons-io.version>
+
+        <!-- empty argLine property, the value is set up by Jacoco during unit tests execution -->
+        <argLine></argLine>
+
     </properties>
 
     <dependencyManagement>
@@ -153,9 +156,16 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} -Xms500m -Xmx500m -Xss256k</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>com.amashchenko.maven.plugin</groupId>
                 <artifactId>gitflow-maven-plugin</artifactId>
-                <version>1.14.0</version>
+                <version>${gitflow-maven-plugin.version}</version>
                 <configuration>
                     <allowSnapshots>false</allowSnapshots>
                     <fetchRemote>false</fetchRemote>
