--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,19 @@
 version: 2
+aliases:
+  - &sonar-scan
+    name: Sonar scan
+    command: |
+      mvn -s /tools/m2/settings.xml \
+        org.jacoco:jacoco-maven-plugin:prepare-agent verify \
+        org.jacoco:jacoco-maven-plugin:report sonar:sonar \
+        -Dmaven.main.skip \
+        -DskipTests \
+        -Dsonar.projectKey=entur_${CIRCLE_PROJECT_REPONAME} \
+        -Dsonar.organization=${SONAR_ORG} \
+        -Dsonar.projectName=${CIRCLE_PROJECT_REPONAME} \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.login=${ENTUR_SONAR_PASSWORD}
+
 jobs:
   test:
     docker:
@@ -20,6 +35,7 @@ jobs:
         key: dep-cache-{{ checksum "pom.xml" }}
     # Cannot use -o because of snapshot dependencies.
     - run: mvn test -s /tools/m2/settings.xml
+    - run: *sonar-scan
     - run:
         name: Save test results
         command: |
