--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.12</version>
+        <version>1.0.14</version>
     </parent>
 
     <groupId>org.entur.helpers</groupId>
@@ -54,6 +54,7 @@
         <module>slack</module>
         <module>entur-google-pubsub</module>
         <module>camel-entur-google-pubsub</module>
+        <module>camel3-entur-google-pubsub</module>
     </modules>
 
     <scm>
@@ -90,6 +91,7 @@
         <keycloak.version>4.8.3.Final</keycloak.version>
         <spring-cloud-gcp.version>1.2.5.RELEASE</spring-cloud-gcp.version>
         <camel.version>2.25.2</camel.version>
+        <camel3.version>3.4.4</camel3.version>
         <kubernetes-client.version>4.9.2</kubernetes-client.version>
         <commons-io.version>2.7</commons-io.version>
 
