Add Support for Hazelcast 4

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <modules>
         <module>gcp-storage</module>
         <module>hazelcast-helper</module>
+        <module>hazelcast4-helper</module>
         <module>calendar-helper</module>
         <module>organisation</module>
         <module>slack</module>
