--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.17</version>
+        <version>1.0.18-SNAPSHOT</version>
     </parent>
 
     <groupId>org.entur.helpers</groupId>
