--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.18</version>
+        <version>1.0.19-SNAPSHOT</version>
     </parent>
 
     <groupId>org.entur.helpers</groupId>
@@ -87,7 +87,8 @@
         <java.version>8</java.version>
 
         <keycloak.version>4.8.3.Final</keycloak.version>
-        <spring-cloud-gcp.version>1.2.6.RELEASE</spring-cloud-gcp.version>
+        <spring-cloud.version>2020.0.0</spring-cloud.version>
+        <spring-cloud-gcp.version>2.0.0</spring-cloud-gcp.version>
         <camel.version>2.25.3</camel.version>
         <camel3.version>3.4.5</camel3.version>
         <kubernetes-client.version>4.13.0</kubernetes-client.version>
@@ -111,6 +112,13 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.cloud</groupId>
                 <artifactId>spring-cloud-gcp-dependencies</artifactId>
                 <version>${spring-cloud-gcp.version}</version>
                 <type>pom</type>
