--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -27,7 +26,7 @@
 
     <groupId>org.entur.helpers</groupId>
     <artifactId>helper</artifactId>
-    <version>1.0.49-SNAPSHOT</version>
+    <version>1.0.49</version>
     <packaging>pom</packaging>
 
     <name>rutebanken-helper</name>
@@ -64,7 +63,7 @@
         <connection>scm:git:ssh://git@github.com/entur/rutebanken-helpers.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/entur/rutebanken-helpers.git</developerConnection>
         <url>https://github.com/entur/rutebanken-helpers/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>helper-1.0.49</tag>
     </scm>
 
     <distributionManagement>
@@ -99,7 +98,7 @@
 
 
         <!-- empty argLine property, the value is set up by Jacoco during unit tests execution -->
-        <argLine/>
+        <argLine />
 
     </properties>
 
