--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.entur.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>1.0.49</version>
+        <version>1.0.50-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
