--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>com.hazelcast</groupId>
+                <artifactId>hazelcast-kubernetes</artifactId>
+                <version>2.2.2</version>
+            </dependency>
+
             <!--See compatibility matrix https://github.com/fabric8io/kubernetes-client#compatibility-matrix -->
             <dependency>
                 <groupId>io.fabric8</groupId>
