--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.28-SNAPSHOT</version>
+        <version>1.0.28</version>
     </parent>
 
     <groupId>org.entur.helpers</groupId>
