--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ aliases:
   - &sonar-scan
     name: Sonar scan
     command: |
-      mvn -s /tools/m2/settings.xml \
+      mvn -s .circleci/settings.xml \
         org.jacoco:jacoco-maven-plugin:prepare-agent verify \
         org.jacoco:jacoco-maven-plugin:report sonar:sonar \
         -Dmaven.main.skip \
@@ -17,65 +17,71 @@ aliases:
 jobs:
   test:
     docker:
-    - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
-      auth:
-        username: _json_key
-        password: $DOCKER_PASSWORD
+      - image: cimg/openjdk:11.0
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
-    - checkout
-    - restore_cache:
-        key: dep-cache-{{ checksum "pom.xml" }}
-    # Use forked version of the dependency plugin to handle correctly inter-module dependencies (https://issues.apache.org/jira/browse/MDEP-568)
-    - run: mvn com.offbytwo.maven.plugins:maven-dependency-plugin:3.1.1.MDEP568:go-offline -DexcludeGroupIds=org.entur.helpers -s /tools/m2/settings.xml
-    - save_cache:
-        paths:
-        - ~/.m2
-        key: dep-cache-{{ checksum "pom.xml" }}
-    # Cannot use -o because of snapshot dependencies.
-    - run: mvn test -s /tools/m2/settings.xml
-    - run: *sonar-scan
-    - run:
-        name: Save test results
-        command: |
-          mkdir -p ~/junit/
-          find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
-        when: always
-    - store_test_results:
-        path: ~/junit
-    - store_artifacts:
-        path: ~/junit
+      - checkout
+      - restore_cache:
+          key: dep-cache-{{ checksum "pom.xml" }}
+      - run:
+          name: Download Maven settings
+          command: wget https://raw.githubusercontent.com/entur/circleci-toolbox-image-java11/master/tools/m2/settings.xml -O .circleci/settings.xml
+      - run:
+          name: Refresh cache
+          # Use forked version of the dependency plugin to handle correctly inter-module dependencies (https://issues.apache.org/jira/browse/MDEP-568)
+          command: mvn com.offbytwo.maven.plugins:maven-dependency-plugin:3.1.1.MDEP568:go-offline -DexcludeGroupIds=org.entur.helpers -s .circleci/settings.xml
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: dep-cache-{{ checksum "pom.xml" }}
+        # Cannot use -o because of snapshot dependencies.
+      - run:
+          name: Run Maven verify
+          command: mvn verify -s .circleci/settings.xml
+      - run: *sonar-scan
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - target
+            - .circleci
+
   deploy-artifactory:
     docker:
-    - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
-      auth:
-        username: _json_key
-        password: $DOCKER_PASSWORD
+      - image: cimg/openjdk:11.0
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
-    - run: git config --global user.email "circleci@entur.no"
-    - run: git config --global user.name "circleci"
-    - checkout
-    - restore_cache:
-        key: dep-cache-{{ checksum "pom.xml" }}
-    - run: mvn com.offbytwo.maven.plugins:maven-dependency-plugin:3.1.1.MDEP568:go-offline -DexcludeGroupIds=org.entur.helpers -s /tools/m2/settings.xml
-    - save_cache:
-        paths:
-        - ~/.m2
-        key: dep-cache-{{ checksum "pom.xml" }}
-    - run: mvn gitflow:release -B -s /tools/m2/settings.xml -DargLine='-s /tools/m2/settings.xml' -DpostReleaseGoals=deploy -DskipTestProject=true
+      - run: git config --global user.email "circleci@entur.no"
+      - run: git config --global user.name "circleci"
+      - checkout
+      - restore_cache:
+          key: dep-cache-{{ checksum "pom.xml" }}
+      - attach_workspace:
+          at: ~/project
+      - run:
+          name: Run Maven Gitflow release
+          command: mvn gitflow:release -B -s .circleci/settings.xml -DargLine='-s .circleci/settings.xml' -DpostReleaseGoals=deploy -DskipTestProject=true
 workflows:
   version: 2
   build_test_deploy:
     jobs:
-    - test:
-        context: org-carbon
-    - deploy-artifactory:
-        context: org-carbon
-        requires:
-        - test
-        filters:
-          branches:
-            only: master
+      - test:
+          context: org-carbon
+      - deploy-artifactory:
+          context: org-carbon
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
