--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
   test:
     docker:
       - image: cimg/openjdk:11.0
+        auth:
+          username: $DOCKERHUB_LOGIN
+          password: $DOCKERHUB_PASSWORD
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
@@ -59,6 +62,9 @@ jobs:
   deploy-artifactory:
     docker:
       - image: cimg/openjdk:11.0
+        auth:
+          username: $DOCKERHUB_LOGIN
+          password: $DOCKERHUB_PASSWORD
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
@@ -77,9 +83,13 @@ workflows:
   build_test_deploy:
     jobs:
       - test:
-          context: org-carbon
+          context:
+            - org-carbon
+            - global
       - deploy-artifactory:
-          context: org-carbon
+          context:
+            - org-carbon
+            - global
           requires:
             - test
           filters:
