--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,7 @@ jobs:
             - dep-cache-
       - attach_workspace:
           at: ~/project
+      - run: *jfrog-login
       - run:
           name: Run Maven Gitflow release
           command: mvn gitflow:release -B -s .circleci/settings.xml -DargLine='-s .circleci/settings.xml' -DpostReleaseGoals=deploy -DskipTestProject=true
