--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.rutebanken.superpom</groupId>
+        <groupId>org.entur.ror</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.37</version>
+        <version>1.0.40</version>
     </parent>
 
     <groupId>org.entur.helpers</groupId>
@@ -89,7 +89,7 @@
 
         <spring-cloud-gcp.version>3.1.0</spring-cloud-gcp.version>
         <camel.version>2.25.4</camel.version>
-        <camel3.version>3.14.1</camel3.version>
+        <camel3.version>3.14.3</camel3.version>
         <kubernetes-client.version>4.13.3</kubernetes-client.version>
         <commons-io.version>2.11.0</commons-io.version>
         <hazelcast-kubernetes.version>2.2.3</hazelcast-kubernetes.version>
