--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.entur.ror</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.58</version>
+        <version>1.59</version>
     </parent>
 
     <groupId>org.entur.ror.helpers</groupId>
@@ -86,10 +86,11 @@
 
         <java.version>11</java.version>
 
-        <spring-cloud-gcp.version>3.4.4</spring-cloud-gcp.version>
+        <spring-cloud-gcp.version>3.5.0</spring-cloud-gcp.version>
         <camel.version>2.25.4</camel.version>
-        <camel3.version>3.14.4</camel3.version>
-        <kubernetes-client.version>5.12.4</kubernetes-client.version>
+        <camel3.version>3.20.4</camel3.version>
+        <!-- Kubernetes client version aligned on camel-kubernetes transitive dependency -->
+        <kubernetes-client.version>6.5.1</kubernetes-client.version>
         <commons-io.version>2.11.0</commons-io.version>
         <hazelcast-kubernetes.version>2.2.3</hazelcast-kubernetes.version>
 
