--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 
         <hamcrest.version>2.2</hamcrest.version>
 
-        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 
 
@@ -186,7 +186,8 @@
                     <verbose>true</verbose>
                     <commitMessagePrefix>[ci skip]</commitMessagePrefix>
                     <gitFlowConfig>
-                        <developmentBranch>master</developmentBranch>
+                        <productionBranch>1.x</productionBranch>
+                        <developmentBranch>1.x</developmentBranch>
                     </gitFlowConfig>
                 </configuration>
             </plugin>
