--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,10 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    "group:allNonMajor",
+    "schedule:monthly"
   ],
+  "timezone": "Europe/Oslo",
   "baseBranches": [
     "master",
     "1.x"
