--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,7 @@
 {
   "extends": [
-    "config:base",
-    "group:allNonMajor",
-    "schedule:monthly"
+    "config:base"
   ],
-  "timezone": "Europe/Oslo",
   "baseBranches": [
     "master",
     "1.x"
