--- a/entur-google-pubsub/pom.xml
+++ b/entur-google-pubsub/pom.xml
@@ -23,7 +23,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     <parent>
         <groupId>org.entur.ror.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>2.16</version>
+        <version>2.17-SNAPSHOT</version>
     </parent>
 
     <artifactId>entur-google-pubsub</artifactId>
