--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.entur.ror.helpers</groupId>
     <artifactId>helper</artifactId>
-    <version>2.17-SNAPSHOT</version>
+    <version>2.17</version>
     <packaging>pom</packaging>
 
     <name>entur-helper</name>
