--- a/organisation/pom.xml
+++ b/organisation/pom.xml
@@ -64,6 +64,11 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <scope>test</scope>
