move AWS S3 storage implementation from uttu

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 
     <modules>
         <module>storage</module>
+        <module>storage-aws-s3</module>
         <module>storage-gcp-gcs</module>
         <module>hazelcast4-helper</module>
         <module>calendar-helper</module>
