--- a/slack/pom.xml
+++ b/slack/pom.xml
@@ -22,7 +22,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     <parent>
         <groupId>org.entur.ror.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>2.35-SNAPSHOT</version>
+        <version>3.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -52,7 +52,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>5.3.1</version>
+            <version>${httpclient5.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
