rename gcs-storage submodule to storage-gcp-gcs to group modules together better
There will be storage-aws-s3 available soon as well, which is why the kind-vendor-product naming scheme was chosen.

--- a/storage-gcp-gcs/pom.xml
+++ b/storage-gcp-gcs/pom.xml
@@ -32,7 +32,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gcp-storage</artifactId>
+    <artifactId>storage-gcp-gcs</artifactId>
 
     <name>gcp-storage</name>
     <description>
