--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 
     <modules>
         <module>storage</module>
-        <module>gcp-storage</module>
+        <module>storage-gcp-gcs</module>
         <module>hazelcast4-helper</module>
         <module>calendar-helper</module>
         <module>organisation</module>
