--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.entur.ror.helpers</groupId>
     <artifactId>helper</artifactId>
-    <version>3.1-SNAPSHOT</version>
+    <version>4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>entur-helper</name>
@@ -48,7 +48,7 @@
 
     <modules>
         <module>storage</module>
-        <module>gcp-storage</module>
+        <module>storage-gcp-gcs</module>
         <module>hazelcast4-helper</module>
         <module>calendar-helper</module>
         <module>organisation</module>
