--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -50,6 +50,11 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>${jakarta.annotation-api.version}</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
