--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <module>slack</module>
         <module>entur-google-pubsub</module>
         <module>oauth2</module>
+        <module>permission-store-proxy</module>
     </modules>
 
     <scm>
