--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -70,3 +70,4 @@ jobs:
       push_to_repo: true
       snapshot: false
       next_version: 'minor'
+      settings-xml_file: 'https://raw.githubusercontent.com/entur/ror-maven-settings/master/.m2/settings.xml'
